force-app/main/default/objects/Lead/fields/quarterlyBill__c.field-meta.xml
<CustomField>
    <fullName>quarterlyBill__c</fullName>
    <label>quarterlyBill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>