force-app/main/default/objects/Lead/fields/Quick_repay_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Quick_repay_Confidence__c</fullName>
    <inlineHelpText>Are you confident with your plan to repay debt quickly?</inlineHelpText>
    <label>Quick repay Confidence ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>