force-app/main/default/objects/Lead/fields/Referred_by_Aggregator_Acc__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Aggregator_Acc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred by Aggregator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads &amp; Referrals (Referred by Aggregator)</relationshipLabel>
    <relationshipName>Leads_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>