force-app/main/default/objects/Lead/fields/Referred_by_Company__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Who referred this lead? The referrer is present as an account in SalesForce</inlineHelpText>
    <label>Referred by Company</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please add Business Account only.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Referrer_Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Referred by Company)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>