force-app/main/default/objects/Lead/fields/Referrer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_First_Name__c</fullName>
    <formula>FinServ__ReferredByContact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer First Name</label>
    <type>Text</type>
</CustomField>