force-app/main/default/objects/Lead/fields/Referrer_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Full_Name__c</fullName>
    <formula>FinServ__ReferredByContact__r.FirstName + &apos; &apos; + FinServ__ReferredByContact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Full Name</label>
    <type>Text</type>
</CustomField>