force-app/main/default/objects/Lead/fields/roofSlope__c.field-meta.xml
<CustomField>
    <fullName>roofSlope__c</fullName>
    <label>roofSlope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>