force-app/main/default/objects/Lead/fields/RR_ID__c.field-meta.xml
<CustomField>
    <fullName>RR_ID__c</fullName>
    <formula>IF( Lead_Number__c &lt;&gt; 0, MOD(( Lead_Number__c) ,1) +1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RR ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>