force-app/main/default/objects/Lead/fields/Satisfied_with_the_rates_of_interest__c.field-meta.xml
<CustomField>
    <fullName>Satisfied_with_the_rates_of_interest__c</fullName>
    <label>Satisfied with the rates of interest ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>