force-app/main/default/objects/Lead/fields/Shade__c.field-meta.xml
<CustomField>
    <fullName>Shade__c</fullName>
    <label>Shade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>