force-app/main/default/objects/Lead/fields/size__c.field-meta.xml
<CustomField>
    <fullName>size__c</fullName>
    <description>SQ</description>
    <label>Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>