force-app/main/default/objects/Lead/fields/SMS_Opt_Opt__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_Opt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Opt Opt</label>
    <type>Checkbox</type>
</CustomField>