force-app/main/default/objects/Lead/fields/Solar_Quotes_Customer__c.field-meta.xml
<CustomField>
    <fullName>Solar_Quotes_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solar Quotes Customer</label>
    <type>Checkbox</type>
</CustomField>