force-app/main/default/objects/Lead/fields/SQ_Commission_Script_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>SQ_Commission_Script_Read_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SQ Commission Script Read Date</label>
    <type>Checkbox</type>
</CustomField>