force-app/main/default/objects/Lead/fields/Stories__c.field-meta.xml
<CustomField>
    <fullName>Stories__c</fullName>
    <label>Stories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>