force-app/main/default/objects/Lead/fields/submittedDate__c.field-meta.xml
<CustomField>
    <fullName>submittedDate__c</fullName>
    <description>For solar quotes</description>
    <label>submittedDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>