force-app/main/default/objects/Lead/fields/System_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>System_Price_Type__c</fullName>
    <label>System Price Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>