force-app/main/default/objects/Lead/fields/Time_to_Call__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Call__c</fullName>
    <label>Time to Call</label>
    <length>255</length>
    <type>Text</type>
</CustomField>