force-app/main/default/objects/Lead/fields/Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Timeframe__c</fullName>
    <label>Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>next 4 weeks</fullName>
            </value>
            <value>
                <fullName>next 3 months</fullName>
            </value>
            <value>
                <fullName>next 6 months</fullName>
            </value>
            <value>
                <fullName>just looking (no timeline)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>