force-app/main/default/objects/Lead/fields/Top_Financial_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Top_Financial_Priorities__c</fullName>
    <label>Top Financial Priorities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Save for a house</fullName>
            </value>
            <value>
                <fullName>Manage my finances</fullName>
            </value>
            <value>
                <fullName>Repay mortgage early</fullName>
            </value>
            <value>
                <fullName>Lower household expenditure</fullName>
            </value>
            <value>
                <fullName>Lower cost of interest</fullName>
            </value>
            <value>
                <fullName>Save for an event or purchase</fullName>
            </value>
            <value>
                <fullName>Be debt free sooner</fullName>
            </value>
            <value>
                <fullName>Track and improve cash flow</fullName>
            </value>
            <value>
                <fullName>Consolidate debt</fullName>
            </value>
            <value>
                <fullName>Build wealth through investment</fullName>
            </value>
            <value>
                <fullName>Lower loan repayments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>