force-app/main/default/objects/Lead/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Home Buyer Pre-Approval</fullName>
            </value>
            <value>
                <fullName>First Home Buyer Saving Program</fullName>
            </value>
            <value>
                <fullName>Pre-Approval</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Rate negotiation</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Top up</fullName>
            </value>
            <value>
                <fullName>Variation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>