force-app/main/default/objects/Lead/fields/typeOfRoof__c.field-meta.xml
<CustomField>
    <fullName>typeOfRoof__c</fullName>
    <label>typeOfRoof</label>
    <length>255</length>
    <type>Text</type>
</CustomField>