force-app/main/default/objects/Lead/fields/Unread__c.field-meta.xml
<CustomField>
    <fullName>Unread__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Unread</label>
    <type>Checkbox</type>
</CustomField>