force-app/main/default/objects/Lead/fields/Using_System_to_track_your_Finance__c.field-meta.xml
<CustomField>
    <fullName>Using_System_to_track_your_Finance__c</fullName>
    <inlineHelpText>Do you use a system to track and manage your finances?</inlineHelpText>
    <label>Using System to track your Finance?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>