force-app/main/default/objects/Lead/fields/Wallet_Share_Opportunities_Identified__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Share_Opportunities_Identified__c</fullName>
    <label>Wallet Share Opportunities Identified</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Consolidate</fullName>
            </value>
            <value>
                <fullName>Renovate</fullName>
            </value>
            <value>
                <fullName>Invest</fullName>
            </value>
            <value>
                <fullName>Move House</fullName>
            </value>
            <value>
                <fullName>Motor Vehicle Purchase</fullName>
            </value>
            <value>
                <fullName>Major Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>