force-app/main/default/objects/Lead/fields/What_is_your_stage_in_life__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_stage_in_life__c</fullName>
    <label>What is your stage in life?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Establishing Yourself</fullName>
            </value>
            <value>
                <fullName>Building Wealth</fullName>
            </value>
            <value>
                <fullName>Consolidating Wealth</fullName>
            </value>
            <value>
                <fullName>Planning for Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>