force-app/main/default/objects/Lead/fields/What_type_of_system_are_you_after__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_system_are_you_after__c</fullName>
    <label>What type of system are you after?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>