force-app/main/default/objects/Lead/recordTypes/Asset_Finance.recordType-meta.xml
<RecordType>
    <fullName>Asset_Finance</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Asset Finance</label>
</RecordType>