force-app/main/default/objects/Lead/recordTypes/Commercial_Asset_Finance.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Asset_Finance</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Commercial Asset Finance</label>
</RecordType>