force-app/main/default/objects/Lead/recordTypes/Commercial_Asset_purchase.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Asset_purchase</fullName>
    <active>false</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Commercial Asset purchase</label>
</RecordType>