force-app/main/default/objects/Lead/recordTypes/Commercial_Mortgage.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Mortgage</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Commercial Mortgage</label>
</RecordType>