force-app/main/default/objects/Lead/recordTypes/Commercial_Property_Purchase.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Property_Purchase</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Commercial Property Purchase</label>
</RecordType>