force-app/main/default/objects/Lead/recordTypes/Commercial_Solar_Purchase.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Solar_Purchase</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Commercial Solar Purchase</label>
</RecordType>