force-app/main/default/objects/Lead/recordTypes/Debt_Consolidation.recordType-meta.xml
<RecordType>
    <fullName>Debt_Consolidation</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Debt Consolidation</label>
</RecordType>