force-app/main/default/objects/Lead/recordTypes/FinServ__General.recordType-meta.xml
<RecordType>
    <fullName>FinServ__General</fullName>
    <active>false</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>General</label>
</RecordType>