force-app/main/default/objects/Lead/recordTypes/First_Home_Purchase.recordType-meta.xml
<RecordType>
    <fullName>First_Home_Purchase</fullName>
    <active>false</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>First Home Purchase</label>
</RecordType>