force-app/main/default/objects/Lead/recordTypes/Green_Loan.recordType-meta.xml
<RecordType>
    <fullName>Green_Loan</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>Green Loan</label>
</RecordType>