force-app/main/default/objects/Lead/recordTypes/Home_Improvement.recordType-meta.xml
<RecordType>
    <fullName>Home_Improvement</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Home Improvement</label>
</RecordType>