force-app/main/default/objects/Lead/recordTypes/Home_Loan_Construction.recordType-meta.xml
<RecordType>
    <fullName>Home_Loan_Construction</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Home Loan Construction</label>
</RecordType>