force-app/main/default/objects/Lead/recordTypes/Home_Loan_General.recordType-meta.xml
<RecordType>
    <fullName>Home_Loan_General</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Home Loan General</label>
</RecordType>