force-app/main/default/objects/Lead/recordTypes/Home_Loan_Purchase.recordType-meta.xml
<RecordType>
    <fullName>Home_Loan_Purchase</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Home Loan Purchase</label>
</RecordType>