force-app/main/default/objects/Lead/recordTypes/Home_Loan_Refinance.recordType-meta.xml
<RecordType>
    <fullName>Home_Loan_Refinance</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Home Loan Refinance</label>
</RecordType>