force-app/main/default/objects/Lead/recordTypes/House.recordType-meta.xml
<RecordType>
    <fullName>House</fullName>
    <active>false</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>House</label>
</RecordType>