force-app/main/default/objects/Lead/recordTypes/House_and_Land.recordType-meta.xml
<RecordType>
    <fullName>House_and_Land</fullName>
    <active>false</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>House and Land</label>
</RecordType>