force-app/main/default/objects/Lead/recordTypes/Investment_Property_Purchase.recordType-meta.xml
<RecordType>
    <fullName>Investment_Property_Purchase</fullName>
    <active>false</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Investment Property Purchase</label>
</RecordType>