force-app/main/default/objects/Lead/recordTypes/Land.recordType-meta.xml
<RecordType>
    <fullName>Land</fullName>
    <active>false</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Land</label>
</RecordType>