force-app/main/default/objects/Lead/recordTypes/Lead_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Lead_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>Lead Record Type</label>
</RecordType>