force-app/main/default/objects/Lead/recordTypes/Next_Home_Purchase.recordType-meta.xml
<RecordType>
    <fullName>Next_Home_Purchase</fullName>
    <active>false</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Next Home Purchase</label>
</RecordType>