force-app/main/default/objects/Lead/recordTypes/Personal_Loan.recordType-meta.xml
<RecordType>
    <fullName>Personal_Loan</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Personal Loan</label>
</RecordType>