force-app/main/default/objects/Lead/recordTypes/Referrer.recordType-meta.xml
<RecordType>
    <fullName>Referrer</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Referrer</label>
</RecordType>