force-app/main/default/objects/Lead/recordTypes/Refinance.recordType-meta.xml
<RecordType>
    <fullName>Refinance</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Refinance</label>
</RecordType>