force-app/main/default/objects/Lead/recordTypes/Solar.recordType-meta.xml
<RecordType>
    <fullName>Solar</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <description>These are leads who expressed interest in Solar</description>
    <label>Solar</label>
</RecordType>