force-app/main/default/objects/Lead/recordTypes/Vehicle_Purchase.recordType-meta.xml
<RecordType>
    <fullName>Vehicle_Purchase</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Vehicle Purchase</label>
</RecordType>