force-app/main/default/objects/Lead/listViews/All_Potential_HLHC_Leads.listView-meta.xml
<ListView>
    <fullName>All_Potential_HLHC_Leads</fullName>
    <columns>Unread__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>HLHC_Offered__c</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>installationState__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Point_of_Origin__c</columns>
    <columns>FinServ__ReferredByContact__c</columns>
    <columns>leadType__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed (Do not Contact)</value>
    </filters>
    <filters>
        <field>HLHC_Offered__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>6/30/2020 12:00 AM</value>
    </filters>
    <label>All Potential HLHC Leads</label>
</ListView>