force-app/main/default/objects/Lead/listViews/All_SolarQuotes_com_au_Leads.listView-meta.xml
<ListView>
    <fullName>All_SolarQuotes_com_au_Leads</fullName>
    <columns>Unread__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Referred_by_Aggregator_Acc__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>What_type_of_system_are_you_after__c</columns>
    <columns>quarterlyBill__c</columns>
    <columns>installationAddressLineOne__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Referred_by_Aggregator_Acc__c</field>
        <operation>equals</operation>
        <value>Solar Quotes</value>
    </filters>
    <label>All SolarQuotes.com.au Leads</label>
</ListView>