force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>installationState__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>leadType__c</columns>
    <columns>Point_of_Origin__c</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>pi__score__c</columns>
    <columns>FinServ__ReferredByContact__c</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Open Leads &amp; Referrals</label>
</ListView>