force-app/main/default/objects/Lead/listViews/My_Open_Leads_Referrals.listView-meta.xml
<ListView>
    <fullName>My_Open_Leads_Referrals</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>pi__score__c</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>FinServ__ReferredByContact__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>leadType__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Qualified</value>
    </filters>
    <label>My Open Leads &amp; Referrals</label>
</ListView>