force-app/main/default/objects/Lead/listViews/MyUnreadLeads.listView-meta.xml
<ListView>
    <fullName>MyUnreadLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>pi__score__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Point_of_Origin__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.UNREAD</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Unread Leads &amp; Referrals</label>
</ListView>