force-app/main/default/objects/Lead/listViews/Online_Quote_Forms_Commenced.listView-meta.xml
<ListView>
    <fullName>Online_Quote_Forms_Commenced</fullName>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>pi__score__c</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>FULL_NAME</columns>
    <columns>Point_of_Origin__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>FinServ__ReferredByContact__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>leadType__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Online Quote,PA Commenced,PA Completed</value>
    </filters>
    <label>Online Quote Forms Commenced</label>
</ListView>