force-app/main/default/objects/Lead/listViews/Referral_Approvers_Lead.listView-meta.xml
<ListView>
    <fullName>Referral_Approvers_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Referral Approvers</label>
    <queue>Referral_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>